# vcf-9x-in-box

./: .gitignore  DEPLOYMENT_WORKFLOW.md  FAQ.md  Makefile  PYTHON_SETUP.md  PYTHON_STANDARDIZATION.md  README.md  SECRETS_MANAGEMENT.md  TROUBLESHOOTING.md  pyproject.toml  ruff.toml
config/: ks-esx01.cfg  ks-esx02.cfg  ks-esx03.cfg  ks-template.cfg.j2  pi-hole.conf  pihole.toml  unbound.conf  vcf-config.yaml  vcf-management-tiers.yaml  vcf-secrets.yaml.example  vcf90-three-node.json  vcf90-two-node.json
docs/: DEPLOYMENT_WORKFLOW.md  FAQ.md  PYTHON_STANDARDIZATION.md  SECRETS_MANAGEMENT.md  SESSION_2024-10-08.md  TODO.md  VCF_MANAGEMENT_CAPACITY.md  VCF_MANAGEMENT_CAPACITY_QUICKREF.md
docs/plans/: 2024-12-06-cluster-capacity-overview-design.md
scripts/: check_secrets.py  cleanup_vcf_deployment.py  create_esxi_usb.py  create_refind_usb.py  delete_all_vms.py  deploy_vcf_installer.py  deploy_vcf_installer.sh  fix_nsx_edge_amd_ryzen.py  fix_vsan_esa_default_storage_policy.ps1  fix_vsan_esa_default_storage_policy.py  fix_vsan_hcl_bypass.py  fix_vsan_hcl_timestamp.py  generate_kickstart.py  http_server_auth.py  list_vms.py  prepare_esxi_reinstall.sh  setup_esxi_ssh_keys.py  setup_vcf_installer.ps1  setup_vcf_installer.py  validate_vcf_installer_config.py  vcf_capacity_audit.py  vcf_management_power.py  vcf_secrets.py
