[project]
name = "vcf-9x-in-box"
version = "1.0.0"
description = "VMware Cloud Foundation 9.x deployment automation for home lab environments"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "jinja2>=3.1.0",
    "pyyaml>=6.0",
]

[project.scripts]
generate-kickstart = "scripts.generate_kickstart:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = []

[tool.hatch.build.targets.wheel]
packages = ["scripts"]
